[package]
name = "rust_gpiozero"
version = "0.1.0"
authors = ["Rahul Thakoor <rahul.thakoor@gmail.com>"]
repository = "https://github.com/rahul-thakoor/rust_gpiozero.git"
homepage = "https://github.com/rahul-thakoor/rust_gpiozero.git"
license = "GPLv3"
readme = "README.md"
documentation = ""
description = "A library inspired by gpiozero written in Rust."
keywords = ["embedded-hal", "raspberry","pi", "gpiozero", "sysfs_gpio", "rpi"]
exclude = [".idea/*", "doc/**/*.html"]

[features]
nightly = ["linux-embedded-hal"]

[dependencies]
sysfs_gpio = "0.5.1"
linux-embedded-hal = {version="0.1.1",optional=true}

[badges]
travis-ci = { repository = "rahul-thakoor/rust_gpiozero", branch = "master" }

