[package]
name = "rust_gpiozero"
version = "0.2.0"
authors = ["Rahul Thakoor <rahul.thakoor@gmail.com>"]
repository = "https://github.com/rahul-thakoor/rust_gpiozero.git"
homepage = "https://github.com/rahul-thakoor/rust_gpiozero.git"
license = "GPL-3.0"
readme = "README.md"
description = "A library inspired by gpiozero written in Rust."
keywords = ["embedded-hal", "raspberry","pi", "gpiozero", "rpi"]
exclude = [".idea/*", "doc/**/*.html"]
edition = "2018"

[features]


[dependencies]
rppal = "0.11.1"

[badges]
travis-ci = { repository = "rahul-thakoor/rust_gpiozero", branch = "master" }

