[package]
name = "rust_gpiozero"
version = "0.2.1"
authors = ["Rahul Thakoor <rahul.thakoor@gmail.com>"]
repository = "https://github.com/rahul-thakoor/rust_gpiozero.git"
homepage = "https://github.com/rahul-thakoor/rust_gpiozero.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A library inspired by gpiozero written in Rust."
keywords = ["embedded-hal", "raspberry","pi", "gpiozero", "rpi"]
exclude = [".idea/*", "doc/**/*.html"]
edition = "2018"

[features]


[dependencies]
rppal = "0.12.0"
palette = "0.7.3"
